# rendu-moba

./: .gitignore  CMakeLists.txt
BalanceServer/BalanceServer/: stdafx.cpp  stdafx.h
BalanceServer/BalanceServer/Net/: B2LSession.cpp  ClientSession.cpp  GateSession.cpp
CentralServer/CSBattleMgr/: CSBattleMgr.cpp  CSBattleMgr_GCMsg.cpp  CSBattleMgr_GSMsg.cpp  CSBattleMgr_SSMsg.cpp  CSCfgMgr.h  CSKernel.h  CSMailMgr.h  CSUser.cpp  CSUser.h  CSUserCfgMgr.h  CSUserDBDataStruct.h  CSUserMgr_GSMsg.cpp  CSUserMgr_SSMsg.cpp  CSUserMgr_SynUserAskDBCallBack.cpp  CSUserMgr_UserCacheDBAsynHandler.cpp  CSUser_MsgPoster.cpp  CSWordFilter.cpp  CSWordFilter.h  stdafx.cpp
CentralServer/CSBattleMgr/BattleMatcher/: CMatchList_Nomal.h  CMatchTeam.h
CentralServer/CSBattleMgr/Net/: SceneSession.cpp
CentralServer/CSBattleMgr/TaskSys/: Task.cpp  TaskMgr.cpp  TaskMgr.h
CommonCPlus/ELogging/ELogging/: Timer.h  stdafx.h
CommonCPlus/Share/: PointerPoll.h
CommonCPlus/Share/Net/: IMsgHandle.h
ELogging/ELogging/: Logging.h  dllmain.cpp  stdafx.cpp
GateServer/GSKernel/: GSKernel.cpp  GSKernel_MainThread.cpp  GSKernel_MainThread_GCMsgHandler.cpp  stdafx.cpp
GateServer/GSKernel/Net/: GSNetSessionMgr.h
LogServer/LogServer/: stdafx.cpp  stdafx.h
LogServer/LogServer/Net/: LogNetSessionMgr.h
LoginServer/LoginServer/: SdkConnector.cpp
Robot/RobotConsole/: Robot.cpp  Robot.h  RobotConsole.cpp  RobotMgr.cpp  Robot_PostMsg.cpp
Robot/RobotConsole/Net/: RobotSession.h
Share/Net/: ICliSession.h  INetSessionMgr.cpp  INetSessionMgr.h
cmake/macros/: AutoCollect.cmake  CheckBuildDir.cmake  ConfigureBaseTargets.cmake  ConfigureScripts.cmake  FindMySQL.cmake  FindOpenSSL.cmake
src/: CMakeLists.txt
src/common/: CMakeLists.txt
src/common/ELogging/: DefLogging.h
src/common/ELogging/ELogging/: ELogging.cpp  ELogging.h
src/common/Share/Net/: NetPointerPool.h
src/common/SynSocketWrapper/: SynSocketWrapper.cpp  SynSocketWrapper.h
src/servers/BalanceServer/BalanceServer/: BalanceServer.cpp
src/servers/BalanceServer/BalanceServer/Net/: BSNetSessionMgr.h
src/servers/CentralServer/CSBattleMgr/: CSBattle.cpp  CSBattleMgr_AskHandler.cpp  CSBattleMgr_DBCallBacker.cpp  CSBattleRoom.cpp  CSBattleRoom.h  CSCfgMgr.cpp  CSGuideBattle.cpp  CSKernel_MainThread.cpp  CSMailMgr.cpp  CSUserGuideFunc.cpp  CSUserMgr.cpp  CSUserMgr.h  CSUserMgr_AskHandler.cpp  CSUserMgr_GCGuideMsg.cpp  CSUserMgr_GCMsg.cpp  CSUserMgr_MailMsg.cpp  CSUserMgr_Notice.cpp  CSUserMgr_RCMsg.cpp  CSUserMgr_RedisSynCallback.cpp  CSUser_AskHandler.cpp  stdafx.h
src/servers/CentralServer/CSBattleMgr/BattleMatcher/src/: CMatchList_Nomal.cpp  CMatchList_VsAI.cpp
src/servers/CentralServer/CSBattleMgr/Net/: CSNetSessionMgr.h  GateSession.cpp  LogicRedisSession.cpp  RedisSession.cpp
src/servers/CentralServer/CSBattleMgr/TaskSys/: Task.h
src/servers/GateServer/GSKernel/: GSKernel.h  GSKernel_MainThread_CSMsgHandler.cpp
src/servers/GateServer/GSKernel/Net/: ClientSession.cpp  M2CSession.cpp  M2SSession.cpp
src/servers/LogServer/LogServer/: LogServer.cpp
src/servers/LoginServer/LoginServer/: LSDefine.h  LoginServer.cpp  SDKAsynHandler.cpp  stdafx.cpp  stdafx.h
src/servers/SceneServer/SSBattleMgr/: CMakeLists.txt  SSDataStructure.h  SSMoveMgr.h  SSProfileStatics.cpp  SSVMMgr.h  SSWorkThreadMgr.cpp  main.cpp  stdafx.h
src/tools/Robot/RobotConsole/: CfgMgr.cpp  Robot_MsgHandler.cpp  stdafx.cpp
